# live-tip-api

./: Dockerfile  pyproject.toml
src/: app.py  configs.py
src/api/: __init__.py  schemas.py
src/lib/: bitfinex.py  bitpreco.py  coinos.py  depix.py  liquid.py  lnurl.py
src/services/: bitfinex.py  bitpreco.py  coinos.py  depix.py  liquid.py  redis.py
src/utils/: helpers.py
